footer spacing fix

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -351,6 +351,10 @@ svg {
 
 // Home page // Front page
 
+.home-page .footer.bar.container {
+  padding-top: 1rem;
+}
+
 .home-page blockquote {
   color: $primary-color;
   margin-top: 1rem;
